--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -6,6 +6,16 @@
       C-->D;
 ```
 
+```mermaid
+
+User-->Server: POST note;
+Server-->Browser: 302 URL redirect /exampleapp/notes;
+Browser-->Server: GET https://studies.cs.helsinki.fi/exampleapp/notes;
+
+
+
+```
+
 sequenceDiagram
 participant browser
 participant server
