--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -7,15 +7,14 @@
 ```
 
 ```mermaid
-
-User-->Server: POST note;
-Server-->Browser: 302 URL redirect /exampleapp/notes;
-Browser-->Server: GET https://studies.cs.helsinki.fi/exampleapp/notes;
-
-
+  graph TD;
+    User-->Server: POST note;
+    Server-->Browser: 302 URL redirect /exampleapp/notes;
+    Browser-->Server: GET https://studies.cs.helsinki.fi/exampleapp/notes;
 
 ```
 
+```mermaid
 sequenceDiagram
 participant browser
 participant server
@@ -43,3 +42,4 @@ participant server
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+```
