--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -1,28 +1,22 @@
 ```mermaid
-  graph TD;
-      A-->B;
-      A-->C;
-      B-->D;
-      C-->D;
-```
-
-```mermaid
-  graph TD;
-    User-->Server: POST note;
-    Server-->Browser: 302 URL redirect /exampleapp/notes;
-    Browser-->Server: GET https://studies.cs.helsinki.fi/exampleapp/notes;
-
-```
-
-```mermaid
 sequenceDiagram
 participant browser
 participant server
 
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    Note right of browser: User hits save
+
+    activate server
+    server-->>browser: redirect to https://studies.cs.helsinki.fi/exampleapp/notes
+        Note left of server: Server pushes content of note input field to notes array, then responds with redirect back to notes page
+    deactivate server
+
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+
     activate server
     server-->>browser: HTML document
     deactivate server
+
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate server
